src/sass/views/_mediumViewOver.scss
/*
 *
 * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 * wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html
 *
 */
/*
  @title: Medium view and over (screen only)
 */
$language-toggle-gradient-start: #494949;
$language-toggle-gradient-end: #333333;
$banner-gradient-start: #29527D;
$banner-gradient-end: #397BC5;
$search-button-gradient-start: #F0F0F0;
$search-button-gradient-end: #CCC;
$navigation-bar-gradient-start: #2A79C5;
$navigation-bar-gradient-end: #1B5A9F;

%page-borders {
	border-left: 1px solid #CCC;
	border-right: 1px solid #CCC;
}

%search-controls-overrides {
	border-radius: 2px;
}


%submenu-colors {
	background-color: #CCC;
	color: #000;
}

%secmenu-gcintranet-theme-menuitem-curr-hover-focus {
	background: darken($clrWhite, 50%);
	color: lighten($clrDark, 75%);
}

%gcintranet-theme-wb-sm-wb-navcurr {
	background: #0F315B;
	color: #fff;
}

%medium-view-navigation-links {
	@include navigation-links;
}

#wmms {
	height: 1.9em;
	top: 0;
	right: 0;
	margin-top: -2.8em;
	position: absolute;
	z-index: 2;
}

#gcwu-sig {
	margin-top: 2.8em;
	margin-left: 15px;
}

#wb-bnr {
	background: $banner-gradient-start;
}

#wb-bar {
	background: #FFF;
	border-top: 5px $language-toggle-gradient-start solid;
	border-bottom: 2px solid #CCC;
	position: relative;
	box-shadow: 0 2px 5px;
	z-index: 2;

	+ {
		.container {
			background: linear-gradient(to left, $banner-gradient-start, $banner-gradient-end, $banner-gradient-start);
			position: relative;
		}
	}
}

#wb-lng {
	@extend %medium-view-navigation-links;
	@include linear-background ($language-toggle-gradient-start, $language-toggle-gradient-end);
	padding: 0 1em;
	float: right;

	ul {
		margin-left: 0;
		margin-bottom: 5px;
	}

	a {
		color: #FFF;
	}
}

#wb-srch {
	position: absolute;
	top: 0;
	right: 0;
	margin-top: 0.5em;

	input {
		@extend %search-controls-overrides;
		padding: 2px 0;
	}

	.btn {
		@extend %search-controls-overrides;
		@include linear-background ($search-button-gradient-start, $search-button-gradient-end);

		&:hover, &:focus {
			@include linear-background ($search-button-gradient-end, $search-button-gradient-start);
		}
	}
}

#wb-sttl {
	min-height: 2em;
	margin: 5px 0;
	a {
		font-size: 1.9em;
		text-shadow: 1px 1px 1px #333;
	}
}

#wb-bnr-ss {
	border-top: 1px solid #FFF;
	box-shadow: inset 0 1px 5px;
}

#wb-sm {
	margin-top: 15px;
	.nvbar {
		background-color: #146094;
		@include linear-background ($navigation-bar-gradient-start, $navigation-bar-gradient-end);
		border-top: 1px solid #87AEC9;
		border-bottom: 4px solid #CCCCCC;

		ul
		 {
			&.menu {
				margin-bottom: 0;
				> {
					li {
						padding: 0;
						border-right: 1px solid #999;
						> {
							a {
								&.wb-navcurr {
									@extend %gcintranet-theme-wb-sm-wb-navcurr;
								}
							}
						}
						&.active {
							border-color: #CCC;
							border-right-color: #CCC;
						}
					}
				}
			}
		}
	}

	.active {
		a {
			@extend %submenu-colors;
		}
	}

	a {
		display: block;
		color: #FFF;
		font-weight: 700;
		padding: 0.48em 1.17em 0.48em 0.79em;
		text-decoration: none;
	}

	.sm {
		@extend %medium-view-navigation-links;
		@extend %submenu-colors;
		border-bottom: 4px solid #0F315B;
		border-radius: 0 0 3px 3px;

		a {
			@extend %submenu-colors;
			font-weight: 400;

			&.wb-navcurr {
				@extend %gcintranet-theme-wb-sm-wb-navcurr;
			}
		}
		.slflnk {
			background: #bbb;
		}
	}
}

#wb-bc {
	.container {
		@extend %page-borders;
	}
}

body {
	> {
		main {
			@extend %page-borders;
		}

		header + .container {
			@extend %page-borders;
		}
	}
}

#wb-sec {
	margin-top: 20px;
	padding-bottom: 2em;
	h3 {
		padding: 15px;
		margin: 0;
		border: 1px solid #ddd;
		border-bottom: 3px solid #666;
		line-height: 0.8;
		a {
			color: #333;
			font-size: 0.7em;
			text-decoration: none;
		}
	}
	.list-group {
		margin-bottom: 0;
		a {
			&.list-group-item {
				background: $clrWhite;
				color: $clrDark;
				border-radius: 0;
				margin-top: -1px;
				text-decoration: none;
				&.wb-navcurr {
					@extend %secmenu-gcintranet-theme-menuitem-curr-hover-focus;
				}
				&[href] {
					&:hover, &:focus {
						@extend %secmenu-gcintranet-theme-menuitem-curr-hover-focus;
					}
				}
			}
		}
		.list-group {
			.list-group-item {
				background: darken($clrWhite, 10%);
				color: darken($clrDark, 50%);
				padding-left: 1.8em;
			}
		}
	}
}

[dir=rtl] {
	#wmms, #wb-srch {
		left: 0;
		right: auto;
	}

	#gcwu-sig {
		float: right;
	}

	#wb-lng {
		float: left;
		padding-right: 5px;
	}
}

